--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ body{
   flex-direction: column;
   align-items: center;
   margin-bottom: 220px;
+  margin-top: 160px;
 }
 .feautes_header_box {
   display: flex;
